test/sema/binary.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
fn foo(): void {}

fn main(): void {
    // CHECK: [[# @LINE + 1 ]]:11: error: incompatible operands to binary operator ('void' and 'number')
    foo() + 1.0;
    
    // CHECK: [[# @LINE + 1 ]]:9: error: incompatible operands to binary operator ('number' and 'void')
    1.0 + foo();
    
    // CHECK: [[# @LINE + 1 ]]:11: error: incompatible operands to binary operator ('void' and 'void')
    foo() + foo();

    1.0 + 3.0;
    2.0 + (10.0 * (3.0 > 2.0));

}
